# clesperantoj_prototype

./: .gitignore  .pre-commit-config.yaml  BUILD.md  Doxyfile  LICENSE.txt  README.md  guideline.md  pom.xml  readme.md  release.properties  swig_test.bat
.github/workflows/: auto_update_tier.yaml  build-and-run.yaml  build.yaml  build.yml  build_fast.yaml  test.yaml
imgs/: boats.tif
native/: CMakeLists.txt  clesperanto.java  clesperantoJNI.java  cppbuild.sh  example.i  example_wrap.cxx
native/clesperantoj/: CMakeLists.txt  cppbuild.sh
native/clesperantoj/clic/: CMakeLists.txt
native/clesperantoj/include/: clesperantoj.h  clesperantoj.hpp  kernelj.hpp
native/clesperantoj/src/: clesperantoj.cpp  kernelj.cpp  tier1j.cpp  tier2j.cpp  tier3j.cpp  tier4j.cpp  tier5j.cpp  tier6j.cpp  tier7j.cpp  tier8j.cpp
native/clesperantoj_test/: CMakeLists.txt  clictest.cpp
native/includes/core/: GPU.java  Object.java  SWIGTYPE_p_Object.java  SWIGTYPE_p_cl__CommandQueue.java  SWIGTYPE_p_cl__Context.java  SWIGTYPE_p_cl__Device.java  SWIGTYPE_p_cl__Memory.java  SWIGTYPE_p_cl__Platform.java  SWIGTYPE_p_cl__Program.java  SWIGTYPE_p_cl__size_type.java  SWIGTYPE_p_cl_mem_object_type.java  SWIGTYPE_p_namespace.java  SWIGTYPE_p_std__arrayT_size_t_3_t.java  SWIGTYPE_p_std__shared_ptrT_GPU_t.java  SWIGTYPE_p_std__string.java  cleGPU.i  cleGPU_wrap.cxx  cleObject.i  cleObject.java  cleObjectJNI.java  cleObject_wrap.cxx  cle_preamble.h  clesperanto.hpp  clesperanto.i  clesperanto.java  clesperantoJNI.java  clesperanto_wrap.cxx  clic.hpp  example.i  example_wrap.c  example_wrap.cxx
native/lib/: CLIc.lib
native/test/: CMakeLists.txt  clictest.cpp  example.cpp
src/main/java/net/clesperanto/: ClesperantoJ.java  ImagePlusClesperantoJExample.java  Imglib2ClesperantoJExample.java  pyclesperanto.java
src/main/java/net/clesperanto/clicwrapper/: ConvertersUtility.java  InteractiveWrapperTest.java  YetAnotherPlayground.java  YetAnotherPlaygroundImgLib2.java  clesperanto.java  clesperantoj.java
src/main/java/net/clesperanto/converters/: AbstractConverter.java  ConverterPlugin.java  ConverterService.java  ConverterUtilities.java
src/main/java/net/clesperanto/converters/implementations/: ImagePlusToObjectJConverter.java  ImagePlusToRandomAccessibleIntervalConverter.java  ObjectJToImagePlusConverter.java  ObjectJToRandomAccessibleIntervalConverter.java  RandomAccessibleIntervalToImagePlusConverter.java  RandomAccessibleIntervalToObjectJConverter.java
src/main/java/net/clesperanto/core/: ArrayJ.java  BackendJ.java  DataType.java  DeviceJ.java  MemoryJ.java  MemoryType.java  Utils.java
src/main/java/net/clesperanto/core/kernels/: DepsManager.java  ObjectConverter.java  ObjectType.java  ObjectTypeConverter.java  Tier1.java
src/main/java/net/clesperanto/deprecated/: ConvertersUtility.java  InteractiveWrapperTest.java
src/main/java/net/clesperanto/icy/: Converters.java  IcyConverters.java  IcyDataType.java
src/main/java/net/clesperanto/imagej/: Converters.java  ImageJConverters.java  ImageJDataType.java
src/main/java/net/clesperanto/imglib2/: Converters.java  DataType.java  ImgLib2Converters.java  ImgLib2DataType.java
src/main/java/net/clesperanto/kernels/: Tier1.java  Tier2.java  Tier3.java  Tier4.java  Tier5.java  Tier6.java  Tier7.java  Tier8.java
src/main/java/net/clesperanto/presets/: clesperantoj.java  jclic.java  kernelj.java
src/main/java/net/clesperanto/test/: YetAnotherPlayground.java  YetAnotherPlaygroundImgLib2.java
src/main/java/net/clesperanto/utils/: DepsManager.java  ObjectConverter.java  ObjectType.java
src/test/java/: TestAbsolute.java  TestAbsoluteIcySequence.java  TestAbsoluteImagePlus.java  TestAbsoluteImgLib2.java  TestIcySequencePushAndPull.java  TestImagePlusPushAndPull.java  TestImgLibPushAndPull.java  TestImgPullImgLib2.java  TestPullIcySequence.java  TestPullImagePlus.java  TestPullImgLib2.java  TestPushAndPullIcySequence.java  TestPushAndPullImagePlus.java  TestPushAndPullImgLib2.java
